# minimodal

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile.worker
examples/: comprehensive_example.py  cron_jobs_example.py  example.py  hello.py  secrets_example.py  volumes_example.py  web_endpoints_example.py
minimodal/: __init__.py
minimodal/sdk/: __init__.py  app.py  client.py  function.py  future.py  image.py  secret.py  volume.py  web.py
minimodal/server/: __init__.py  api.py  autoscaler.py  builder.py  containers.py  cron_scheduler.py  crypto.py  models.py  task_scheduler.py  websocket.py
minimodal/server/routes/: __init__.py  dashboard.py  functions.py  health.py  schedules.py  secrets.py  users.py  volumes.py  web_endpoints.py  workers.py
minimodal/server/templates/: dashboard.html
minimodal/worker/: __init__.py  executor.py
tests/: __init__.py  conftest.py  test_autoscaler.py  test_functions.py  test_images.py  test_scheduler.py  test_secrets.py  test_server.py  test_streaming.py  test_users.py  test_volumes.py  test_web_endpoints.py  test_workers.py
