[project]
name = "minimodal"
version = "0.1.0"
description = "A minimal serverless platform for learning"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "sqlmodel>=0.0.14",
    "docker>=7.0.0",
    "cloudpickle>=3.0.0",
    "pydantic>=2.0.0",
    "cryptography>=42.0.0",
    "croniter>=2.0.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "typer>=0.9.0",
    "typing-extensions>=4.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
minimodal-server = "minimodal.server.api:main"
minimodal-worker = "minimodal.worker.executor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
